--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>eureka-server</name>
-	<description>eureka demo</description>
+	<description>eureka server demo</description>
 
 	<parent>
 		<groupId>com.hcs</groupId>
@@ -23,11 +23,6 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 </project>
