--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+spring:
+  application:
+    name: eureka-server
+
 server:
   port: 8761
 
@@ -7,3 +11,5 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
