--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,15 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- 子模块定义 -->
     <modules>
         <module>eureka-server</module>
-        <module>service-sample</module>
+        <module>eureka-client</module>
         <module>service-ribbon</module>
         <module>service-feign</module>
+        <module>service-zuul</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
     <!-- 2018-10-31 from spring cloud official website -->
