--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       server:
         git:
           uri: https://github.com/h-cs/sc-config.git
-          searchPaths:
+          search-paths:
           username:
           password:
       label: master
@@ -17,5 +17,5 @@ server:
 
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: http://localhost:8761/eureka/
